# quadrotor_flight

./: README.md
doc/: FMS.js  NUC_env.md  QGC_install.md
quadrotor_fight_control/: CMakeLists.txt  package.xml
quadrotor_fight_control/include/: input.h
quadrotor_fight_control/src/: PX4CtrlFSM.cpp
quadrotor_flight_control/: CMakeLists.txt  package.xml
quadrotor_flight_control/config/: ctrl_param_fpv.yaml  test.rviz
quadrotor_flight_control/include/: PX4CtrlFSM.h  battery.h  controller.h  imu.h  input.h  odom.h
quadrotor_flight_control/launch/: run_ctrl.launch  run_ctrl_with_lidar.launch  run_ctrl_with_y_lidar.launch  start_with_vins.launch
quadrotor_flight_control/scripts/: lidar2imuframe.py  test.py  tf_my.py
quadrotor_flight_control/src/: PX4CtrlFSM.cpp  battery.cpp  imu.cpp  input.cpp  odom.cpp  offboard.cpp  px4ctrl_node.cpp
quadrotor_msgs/: CMakeLists.txt  package.xml
shfiles/: improve_imu_freq.sh
uav_utils/: CMakeLists.txt  package.xml
