<?xml version="1.0"?>
<package format="2">
  <name>quadrotor_flight_control</name>
  <version>0.0.0</version>
  <description>The quadrotors_flight_control package</description>
  <maintainer email="ll@todo.todo">ll</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>uav_utils</build_depend>


  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>uav_utils</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
